ExtensionCreator returns proper error message if a pem is not pkcs8 format

Extension creator which is in chrome://extensions allows only valid
pkcs8 format private key. This CL makes the extension creator return
proper error message if a private key is not pkcs8 format.

Bug: 866604
Change-Id: I4579257f738995f87689c3aea98f6d07c4665f67
Reviewed-on: https://chromium-review.googlesource.com/1186283
Commit-Queue: Sungguk Lim <limasdf@gmail.com>
Reviewed-by: Joshua Pawlicki <waffles@chromium.org>
Reviewed-by: Devlin <rdevlin.cronin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#586592}
Former-commit-id: 2b8127724ece48b13dc71c8f842bfa5376e8d001