extensions/browser/extension_creator.h
@@ -54,6 +54,8 @@ class ExtensionCreator {
   ErrorType error_type() { return error_type_; }
 
  private:
+  friend class ExtensionCreatorTest;
+
   // Verifies input directory's existence. |extension_dir| is the source
   // directory that should contain all the extension resources. |crx_path| is
   // the path to which final crx will be written.
